--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,3 +6,61 @@
     Verde escuro #007A4B
     #4BFBB7
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+body , html {
+    background-color: #007A4B;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute; /*config para posicionar sempre ao centro da tela o form*/
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*-------------------------------*/
+    overflow: hidden; /* tudo que ficar fora da borda radius nesse caso a imagem fica fora para arredondar os cantos*/
+
+    background-color: white ;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
+
+    transition: width 0.1s, height 0.1s;
+    transition-timing-function: ease;
+}
+
+section#login > div#imagem{
+    display: block;
+    background: #007A4B url(../imagens/money.jpg) no-repeat;
+    background-position: left bottom;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login > div#formulario > p{
+    text-align: justify;
+    text-indent: 8px;
+}
+
+section#login > div#formulario > h1{
+    text-align: center;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
