--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -40,13 +40,25 @@ Grandes Telas: acima de 1200px
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    section#login > div#formulario > p{
+        text-align: justify;
+        text-indent: 8px;
+        font-size: 1.2em;
+    }
+
+    section#login > div#formulario > h1{
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 2em;
     }
 }
