--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,10 +54,12 @@ section#login > div#imagem{
 section#login > div#formulario > p{
     text-align: justify;
     text-indent: 8px;
+    font-size: 0.8em;
 }
 
 section#login > div#formulario > h1{
     text-align: center;
+    margin-bottom: 10px;
 }
 
 section#login > div#formulario{
