--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,7 +35,7 @@ section#login{
 
     background-color: white ;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
 
@@ -60,9 +60,65 @@ section#login > div#formulario > p{
 section#login > div#formulario > h1{
     text-align: center;
     margin-bottom: 10px;
+    color: #007A4B;
+    font-weight: bolder;
+    text-shadow: px 0px 2px #4bfbb779;
 }
 
 section#login > div#formulario{
     display: block;
-    padding: 10px;
+    padding: 8px;
+}
+
+form> div.campo{
+    background-color: #4BFBB7;
+    display: block;
+    width: 100%; 
+    height: 40px; 
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:#257A5A;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form >input[type=submit]:hover{
+    background-color:#4BFBB7;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #257A5A;
+    border: 1px solid #257A5A;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover{
+    background-color: #4BFBB7;
+    color: #257A5A;
+}
+
+form > a.botao > span {
+    font-size: 0.8em;
 }
