--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,6 @@ section#login{
     position: absolute; /*config para posicionar sempre ao centro da tela o form*/
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     /*-------------------------------*/
     overflow: hidden; /* tudo que ficar fora da borda radius nesse caso a imagem fica fora para arredondar os cantos*/
 
@@ -39,6 +38,7 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
 
+    transform: translate(-50%, -50%);
     transition: width 0.1s, height 0.1s;
     transition-timing-function: ease;
 }
@@ -72,15 +72,20 @@ section#login > div#formulario{
 
 form> div.campo{
     background-color: #4BFBB7;
+    border: 2px solid #4BFBB7;
     display: block;
     width: 100%; 
     height: 40px; 
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label{
     display: none;
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit]{
@@ -121,4 +126,22 @@ form > a.botao:hover{
 
 form > a.botao > span {
     font-size: 0.8em;
+}
+
+div.campo > span{
+    color: #007A4B;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #39007a;
+    font-size: 1em;
+    width: calc(100% - 60px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
 }
